--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,7 @@ h1, h2, h3, h4, h5, h6 {
 	background-repeat: no-repeat;
 	background-position: center top;
 	background-size: contain;
+	background-color: rgba(0, 0, 0, .9);
 	display: flex;
 	position: relative;
 }
@@ -396,8 +397,6 @@ h1, h2, h3, h4, h5, h6 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	/* Note: I`ll test this; */
-	justify-content: space-between;
 	justify-content: flex-end;
 }
 
@@ -457,8 +456,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Scroll Block */
 
-.scroll-block {/*
-	background: #fff url('../img/scroll_1.png') no-repeat right top 50%;*/
+.scroll-block {
 	min-height: 100vh;
 	overflow: hidden;
 	padding: 40px 0;
@@ -497,10 +495,6 @@ h1, h2, h3, h4, h5, h6 {
 	width: 100%;
 }
 
-.scroll-block__image {
-	
-}
-
 .scroll-block__image img {
 	max-width: 100%;
 }
@@ -536,139 +530,7 @@ h1, h2, h3, h4, h5, h6 {
 	background: #263238;
 }
 
-/* Burger */
-
-/* .burger {
-	display: none;
-	position: relative;
-	z-index: 5;
-}
-
-.burger__bg {
-	opacity: 0;
-	width: 100%;
-	height: 100vh;
-	background: #000;
-	position: fixed;
-	top: 0;
-	left: 0;
-	transform: translateX(100%);
-	transition: .3s;
-}
-
-.burger__btn {
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	-moz-flex-direction: column;
-	-o-flex-direction: column;
-	flex-direction: column;
-	justify-content: space-between;
-	cursor: pointer;
-	position: relative;
-	z-index: 20;
-	height: 22px;
-}
-
-.burger__line {
-	display: block;
-	width: 30px;
-	height: 4px;
-	background: #fff;
-	transition: .3s;
-}
-
-.burger__menu {
-	width: 40%;
-	height: 100vh;
-	position: fixed;
-	top: 0;
-	right: 0;
-	background: rgba(0, 0, 0, .9);
-	text-align: center;
-	transition: .3s;
-	padding-top: 100px;
-	z-index: 19;
-	overflow: auto;
-	transform: translateX(100%);
-}
-
-.burger__link {
-	cursor: pointer;
-	display: block;
-	padding: 20px 0;
-	transition: .3s;
-	color: #fff !important;
-}
-
-.burger__link:hover {
-	background: #fff;
-	color: #000 !important;
-}
-
-.burger__btn.active > .burger__line:nth-child(1) {
-	transform: translateY(9px) rotate(45deg);
-}
-
-.burger__btn.active > .burger__line:nth-child(2) {
-	transform: scale(0);
-}
-
-.burger__btn.active > .burger__line:nth-child(3) {
-	transform: translateY(-9px) rotate(-45deg);
-}
-
-.burger__btn.active ~ .burger__menu {
-	transform: translateX(0%);
-}
-
-.burger__btn.active ~ .burger__bg {
-	opacity: .2;
-	transform: translateX(0%);
-} */
-
-/* Select */
-
-/* ._select {
-	position: relative;
-}
-
-.select-list {
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	position: absolute;
-	top: 23px;
-	left: 0;
-	z-index: 16;
-	visibility: hidden;
-	opacity: 0;
-	-webkit-transition: .2s;
-	-o-transition: .2s;
-	transition: .2s;
-}
-
-.select-list.active {
-	visibility: visible;
-	opacity: 1;
-}
-
-.select-input {
-	display: none;
-}*/
-
 /* Fonts */
-
-
-
-/* Keyframes */
 
 
 
@@ -678,8 +540,8 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 1750px) {
 	.header-article {
-    flex-basis: 600px;
-    min-height: 300px;
+    flex-basis: 485px;
+    min-height: 303px;
   }
 
   .header-article__title {
@@ -763,10 +625,6 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
-@media (max-width: 767px) {
-
-}
-
 @media (max-width: 600px) {
 	.header-article__wrap {
 		flex-direction: column;
@@ -822,7 +680,7 @@ h1, h2, h3, h4, h5, h6 {
 	}
 
 	.scroll-block__image {
-		flex: 0 0 45% /*calc(((100vw - 40px) * 0.45) + 20px)*/;
+		flex: 0 0 45%;
 		transform: translate(-100%, 0);
 		margin-left: 30px;
 	}
