--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /* Standart */
 
 /* Note: Почисть от лишнего; */
-/* Note: Добавить шрифт; */
 
 *, *::before, *::after {
 	padding: 0;
@@ -51,7 +50,6 @@ button::-moz-focus-inner {
 }
 
 a, a:hover {
-	/* Note: Добавить в шаблон; */
 	color: inherit;
 	text-decoration: none;
 }
@@ -61,13 +59,7 @@ li {
 }
 
 img {
-	vertical-align: top;/* 
-	pointer-events: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	user-select: none; */
+	vertical-align: top;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -177,79 +169,9 @@ h1, h2, h3, h4, h5, h6 {
 	background: #7c8487;
 }
 
-/* Logo */
-
-/* Note: Поправить картинку логотипа; */
-
-.logo {
-
-}
-
-.logo__img {
-	max-width: 100%;
-}
-
 /* Nav */
 
-.nav {
-	background: #1a2334;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 5px;
-}
 
-.nav__logo {
-
-}
-
-.nav__get-touch {
-
-}
-
-.get-touch {
-	display: flex;
-	align-items: center;
-}
-
-.get-touch__img {
-	flex: 0 0 64px;
-	width: 64px;
-	height: 64px;
-	margin-right: 10px;
-}
-
-.get-touch__img img {
-	max-width: 100%;
-}
-
-.get-touch__text {
-	color: #fff;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 14px;
-	position: relative;
-}
-
-.get-touch__text::before {
-	content: '';
-	display: block;
-	position: absolute;
-	bottom: -4px;
-	left: 0;
-	width: 50%;
-	height: 2px;
-	background: #3574d6;
-	transition: .2s;
-}
-
-.get-touch__text:hover {
-	color: #fff;
-}
-
-.get-touch:hover .get-touch__text::before {
-	width: 100%;
-}
 
 /* Header */
 
@@ -364,16 +286,16 @@ h1, h2, h3, h4, h5, h6 {
 	color: #fff;
 	margin-right: 40px;
 	margin-top: 40px;
-}
-
-.header-article__wrap {
-	border-radius: 10px;
-	height: 100%;
-	padding: 20px;
 	background-repeat: no-repeat;
 	background-position: center top;
 	background-size: contain;
-	background-color: rgba(0, 0, 0, .9);
+	border-radius: 10px;
+}
+
+.header-article__wrap {
+	height: 100%;
+	padding: 20px;
+	background-color: rgba(0, 0, 0, .1);
 	display: flex;
 	position: relative;
 }
@@ -530,6 +452,10 @@ h1, h2, h3, h4, h5, h6 {
 	background: #263238;
 }
 
+/* Footer */
+
+
+
 /* Fonts */
 
 
@@ -600,10 +526,6 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
-@media (max-width: 991px) {
-	
-}
-
 @media (max-width: 850px) {
 	.header__navigation {
 		flex-direction: column;
@@ -620,7 +542,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 710px) {
-	.header-article__wrap {
+	.header-article {
 		background-size: cover !important;
 	}
 }
