--- a/css/style.css
+++ b/css/style.css
@@ -331,6 +331,7 @@ h1, h2, h3, h4, h5, h6 {
 	flex: 1 1 auto;
 	font-size: 50px;
 	text-align: center;
+	text-transform: uppercase;
 }
 
 .header-article__excerpt {
